# MeteoriteSimulator

./: .gitignore  3rdParty.cmake  CMakeLists.txt  LICENSE  Makefile  Meteorites.sln  README.md
Meteorites.App/: Main.cpp
Meteorites.Benchmark/: Main.cpp  Meteorites.Benchmark.vcxproj  Meteorites.Benchmark.vcxproj.filters  PrecisionEstimator.cpp  PrecisionEstimator.h
Meteorites.Core/: Adams.h  BasicSolver.cpp  BasicSolver.h  Case.h  Constants.cpp  Constants.h  Defs.h  Functionals.cpp  Functionals.h  ICaseGenerator.h  IMeteorite.h  ISolver.h  Meteorites.Core.vcxproj  Meteorites.Core.vcxproj.filters  ParameterSet.h  ResultFormatter.cpp  ResultFormatters.h
Meteorites.CpuSolvers/: BasicCpuSolver.cpp  BasicCpuSolver.h  GoldSolver.cpp  GoldSolver.h  Meteorites.CpuSolvers.vcxproj  Meteorites.CpuSolvers.vcxproj.filters
Meteorites.GpuSolvers/: AdamsKernels.cu  AdamsKernels.h  AdamsMethod.cu  AdamsMethod.h  BatchedAdamsKernel.cu  BatchedAdamsKernel.h  CudaAdamsMethod.cu  CudaAdamsMethod.h  CudaDefs.h  CudaHandleError.h  CudaManager.cpp  CudaManager.cu  CudaManager.h  CudaManagers.cpp  CudaManagers.h  CudaSolver.cpp  CudaSolver.h  CudaStructures.cu  CudaStructures.h  CudaUniquePtr.h  GPUParameters.h  GenerateCases.cu  GenerateCases.h  Random.cpp  Random.h  RestoreCases.cu  RestoreCases.h
Meteorites.KnowledgeBase/: KnownMeteorites.cpp  KnownMeteorites.h  Meteorites.KnowledgeBase.vcxproj  Meteorites.KnowledgeBase.vcxproj.filters  MonteCarloGenerator.cpp  MonteCarloGenerator.h  PossibleParameters.cpp  PossibleParameters.h
Meteorites.Tests/: GoldSolverTests.cpp  Main.cpp  Meteorites.Tests.vcxproj  Meteorites.Tests.vcxproj.filters  TestDefs.h
